added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST EVER GITHUB REPO</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
+    </div>
 </body>
 </html>
