added the second and the third heading with div sec

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
     </div>
+    <div>
+        <h3>My first website second heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
+    </div>
+    <div>
+        <h3>My first website third heading</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
+    </div>
 </body>
 </html>
