--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My first website third heading</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
