my photo adding

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>It's me</h3>
+        <img src="images/IMG_20231230_163827.jpg" alt="">
+    </div>
 </body>
 </html>
