--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
     </div>
     <div>
+        <h1>Miton ChandraDas</h1>
         <h3>My first website second heading</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus tempore accusantium rerum odio consequuntur, voluptatum eligendi sit dolorem ullam aut cupiditate enim laborum fuga dignissimos, repudiandae voluptas fugiat. Aspernatur.</p>
     </div>
